feat: add real door sensor

--- a/config/settings.json
+++ b/config/settings.json
@@ -10,6 +10,7 @@
             "name": "Door sensor",
             "simulated": true,
             "pin": 4,
+            "debounce_ms": 50,
             "verbose": true,
             "poll_interval": 0.5
         },
