--- a/config/settings.json
+++ b/config/settings.json
@@ -8,8 +8,8 @@
         },
         "DS1": {
             "name": "Door sensor",
-            "simulated": true,
-            "pin": 4,
+            "simulated": false,
+            "pin": 26,
             "debounce_ms": 50,
             "verbose": true,
             "poll_interval": 0.5
