feat: implement real dms

--- a/config/settings.json
+++ b/config/settings.json
@@ -19,7 +19,9 @@
             "simulated": true,
             "pin": 27,
             "verbose": true,
-            "poll_interval": 0.5
+            "poll_interval": 0.5,
+            "rows": [25, 8, 7, 1],
+            "cols": [12, 16, 20, 21]
         },
         "DB": {
             "name": "Door Buzzer",
