feat: implement batched sensor data publishing

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,14 +1,21 @@
 {
+    "mqtt": {
+        "hostname": "localhost",
+        "port": 1883
+    },
+
     "PI1":{
         "DPIR1": {
             "name": "Door PIR motion sensor",
-            "simulated": false,
+            "simulated": true,
+            "topic": "sensors/dpir1",
             "pin": 16,
             "verbose": true
         },
         "DS1": {
             "name": "Door sensor",
-            "simulated": false,
+            "simulated": true,
+            "topic": "sensors/ds1",
             "pin": 26,
             "debounce_ms": 50,
             "verbose": true,
@@ -17,6 +24,7 @@
         "DMS": {
             "name": "Door Membrane Switch",
             "simulated": true,
+            "topic": "sensors/dms",
             "pin": 27,
             "verbose": true,
             "poll_interval": 0.5,
@@ -26,20 +34,23 @@
         "DB": {
             "name": "Door Buzzer",
             "simulated": true,
+            "topic": "sensors/db",
             "pin": 18,
             "verbose": true
         },
         "DL": {
             "name": "Door Light",
             "simulated": true,
+            "topic": "sensors/dl",
             "pin": 16,
             "verbose": true
         },
         "DUS1": {
             "name": "Door ultrasonic sensor",
             "simulated": true,
+            "topic": "sensors/dus1",
             "pin": 17,
             "verbose": true
         }
     }
-}
+  }
