feat: implement simulated DHT

--- a/config/settings.json
+++ b/config/settings.json
@@ -90,6 +90,24 @@
             "columns": 16,
             "rows": 2,
             "runs_on": "PI3"
+        },
+        "DHT1": {
+            "name": "Bedroom DHT",
+            "simulated": true,
+            "topic": "sensors/dht/beedroom",
+            "verbose": true,
+            "pin": 4,
+            "poll_interval": 2.0,
+            "runs_on": "PI3"
+        },
+        "DHT2": {
+            "name": "Master Bedroom DHT",
+            "simulated": true,
+            "topic": "sensors/dht/master-beedroom",
+            "verbose": true,
+            "pin": 4,
+            "poll_interval": 2.0,
+            "runs_on": "PI3"
         }
     }
   }
