feat: add simulated ssd

--- a/config/settings.json
+++ b/config/settings.json
@@ -78,6 +78,15 @@
             "pin": 4,
             "poll_interval": 2.0,
             "runs_on": "PI2"
+        },
+        "4SD": {
+            "name": "Kitchen 4 Digit Display",
+            "simulated": true,
+            "topic": "actuators/7segment/kitchen",
+            "verbose": true,
+            "digits": 4,
+            "refresh_interval": 1.0,
+            "runs_on": "PI2"
         }
     },
     
