--- a/config/settings.json
+++ b/config/settings.json
@@ -32,6 +32,7 @@
             "poll_interval": 0.5,
             "rows": [25, 8, 7, 1],
             "cols": [12, 16, 20, 21],
+            "pin_length": 4,
             "runs_on": "PI1"
         },
         "DB": {
